src/main/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: learnright
  name: course
  labels:
    app: course
spec:
  selector:
    matchLabels:
      app: course
  template:
    metadata:
      labels:
        app: course
    spec:
      containers:
      - name: course
        image: registry.minikube.local:80/testunited/examples-learnright-course:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
