src/main/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: course
  namespace: learnright
spec:
  type: NodePort
  selector:
    app: course
  ports:
  - protocol: TCP
    nodePort: 32002
    port: 80
    targetPort: 80
